@@ -13,7 +13,9 @@ import org.mockito.Mock;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import java.util.*;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -31,20 +33,21 @@ class TimeServiceUnitTest {
 
     @BeforeEach
     void init(){
-        times = new ArrayList<>(Arrays.asList(
-                timeService.adaptTime(new Double("2"), new Date(), "Test Time object 1", State.Date.NEW, null),
-                timeService.adaptTime(new Double("3.5"), new Date(), "Test Time object 2", State.Date.NEW, null)
-        ));
+        times = List.of(
+                timeService.adaptTime(Double.parseDouble("2"), new Date(), "Test Time object 1", State.Date.NEW, null),
+                timeService.adaptTime(Double.parseDouble("3.5"), new Date(), "Test Time object 2", State.Date.NEW, null)
+        );
         times.get(0).setId(1L);
         times.get(1).setId(2L);
     }
 
     @Test
     void adaptTime() {
-        Time time = timeService.adaptTime(new Double("2.5"), new Date(), "Test Time object", State.Date.NEW, null);
-        assertNotNull(time, "Object Time is NULL in adaptTime() test method.");
+        Time time = timeService.adaptTime(Double.parseDouble("2.5"), new Date(), "Test Time object", State.Date.NEW, null);
+
         assertAll("time",
-                () -> assertEquals(new Double("2.5"), time.getTime()),
+                () -> assertNotNull(time),
+                () -> assertEquals(Double.parseDouble("2.5"), time.getTime()),
                 () -> assertEquals("Test Time object", time.getDescription()),
                 () -> assertEquals(State.Date.NEW.toString(), time.getState()),
                 () -> assertNull(time.getAim())
@@ -53,23 +56,22 @@ class TimeServiceUnitTest {
 
     @Test
     void getAimLoggedTimeSum(){
-        assertEquals(new Double("5.5"), timeService.getAimLoggedTimeSum(new HashSet<>(times)));
+        assertEquals(Double.parseDouble("5.5"), timeService.getAimLoggedTimeSum(new HashSet<>(times)));
     }
 
     @Test
     void getMostActiveTime(){
-        Time mostActive = timeService.getMostActiveTime(new HashSet<>(times))
-                .orElseThrow(IllegalArgumentException :: new);
+        Time mostActive = timeService.getMostActiveTime(new HashSet<>(times));
+
+        assertThrows(NullPointerException.class, () -> timeService.getMostActiveTime(null));
+        assertThrows(IllegalArgumentException.class, () -> timeService.getMostActiveTime(new HashSet<>()));
         assertEquals(mostActive.getId(), Long.valueOf(2));
     }
-
-
 
     @Test
     void getLessActiveTime(){
         Time lessActive = timeService.getLessActiveTime(new HashSet<>(times));
         assertEquals(lessActive.getId(), Long.valueOf(1));
     }
-
 
 }
